Ported most of the wobble code over to the tongue.

--- a/data/object_prototypes/general/wobbly_rope.cfg
+++ b/data/object_prototypes/general/wobbly_rope.cfg
@@ -47,37 +47,43 @@
 		converted_custom_draw_params: "[decimal|[decimal,decimal]] ::
 							recombine_serially( sort_back_to_serial_order( convert_back_to_serial_coords( flip_if_facing_left_or_upside_down( convert_to_unit_square_coords( recombine_pairwise( custom_draw_params))))))",
 
-		custom_draw_params: "[decimal|[decimal,decimal]] ::
-			(([0.0, 0.25, 0.5, 0.75, 1.0,
-			2.0, 2.25, 2.5, 2.75, 3.0,
-			c_upper_edge, map(c_upper_edge, value * 0.60), map(c_upper_edge, value * 0.3), map(c_upper_edge, value * 0.05),still, 
-			still, map(c_lower_edge, value * 0.05), map(c_lower_edge, value * 0.3), map(c_lower_edge, value * 0.60), c_lower_edge
-			]) where still = [0,0]
-				where c_upper_edge = [upper_edge[0]*facing, upper_edge[1]]
-				where c_lower_edge = [lower_edge[0]*facing, lower_edge[1]]
-				where upper_edge = zip( [x2,mid_y],newPos, a-b)
-				where lower_edge = zip( [x2,mid_y],newPos, a-b))
-				where newPos = [x,y + _magnitude]", //(orbit(x,mid_y, sin(15*cycle)*_magnitude, img_w))",
+		custom_draw_params: "[decimal|[decimal,decimal]] :: (
+			offsets +
+			map(offsets, value + 2.0) +
+			map(offsets, wt(value)) +
+			map(offsets, wb(value))
+		)
+			where offsets = create_offsets(node_count)
+			where wt = def(decimal offset) generate_wobble(offset, 1)
+			where wb = def(decimal offset) generate_wobble((1.0 - offset) + 3.14 * 1.0, -1)",
+	
 
-		_magnitude: "decimal :: 50.0",
+			node_count: "int :: 10",
+			generate_wobble: "def(decimal offset, int polarity) -> [decimal,decimal] dump([ 0 * facing, polarity * 10.0 * sin(offset * 3.14 * 125.0  + level.cycle*10.0) ])",
+		
+			create_offsets: "def(int item_count) -> [decimal] map(range(item_count), (value)/decimal(item_count - 1) )",
+
 
 	},
 	
 	on_process: "[
-		set(mid_x, int( (bounds.x2 + bounds.x) / 2) ),
-		set(y, int((bounds.y2 + bounds.y) / 2 - (length/2))),
-		//set(draw_area, [0, 0, img_w/2, length/2]),
-		set(rotate, ( angle(bounds.x, bounds.y, bounds.x2, bounds.y2) - 90) ),
+		set(mid_y, int( (bounds.y2 + bounds.y) / 2) ),
+		set(x, int((bounds.x2 + bounds.x) / 2 - (length/2))),
+		set(draw_area, [0, 0, length/2, img_h/2]),
+		set(rotate, ( angle(bounds.x, bounds.y, bounds.x2, bounds.y2) ) ),
 
 		set(custom_draw, converted_custom_draw_params),
 	]",
 
 		
 	animation: {
-		id: "default",
-		image: "characters/frogatto-tongueB.png",
-		rect: [0,0,7,7],
-		frames: 1,
-		no_remove_alpha_borders: true,
+		id: "normal",
+		image: "characters/frogatto-tongueC.png",
+		x: 0,
+		y: 0,
+		w: 7,
+		h: 7,
+# 		frames: 1,
+# 		no_remove_alpha_borders: true,
 	},
 }
