--- a/data/objects/experimental/wobbly_thing.cfg
+++ b/data/objects/experimental/wobbly_thing.cfg
@@ -44,7 +44,7 @@ properties: {
 	
 
 		node_count: "int :: 10",
-		generate_wobble: "def(decimal offset, int polarity) -> [decimal,decimal] dump([ 0 * facing, polarity * 10.0 * sin(offset * 3.14 * 125.0  + cycle*10.0) ])",
+		generate_wobble: "def(decimal offset, int polarity) -> [decimal,decimal] [ 0 * facing, polarity * 10.0 * sin(offset * 3.14 * 125.0  + cycle*10.0) ]",
 		
 		create_offsets: "def(int item_count) -> [decimal] map(range(item_count), (value)/decimal(item_count - 1) )",
 			
