--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3095,8 +3095,11 @@ object_type: [
 			
 		animation: {
 			id: "default",
-			image: "characters/frogatto-tongueB.png",
-			rect: [0,0,7,7],
+			image: "characters/frogatto-tongueC.png",
+			x: 0,
+			y: 0,
+			w: 7,
+			h: 7,
 			frames: 1,
 			no_remove_alpha_borders: true,
 		},
@@ -3229,7 +3232,7 @@ object_type: [
 		
 		
 		
-		on_draw: "process_tongue()",
+		on_process: "process_tongue()",
 		
 		on_die: "[
 			if(_swallowed and _swallowed.physical_size > 8, [
