Cleaning up/breaking out the wobble code so we can attenuate the head and the tail of it.

--- a/data/objects/experimental/wobbly_thing.cfg
+++ b/data/objects/experimental/wobbly_thing.cfg
@@ -38,13 +38,27 @@ properties: {
 		map(offsets, wt(value)) +
 		map(offsets, wb(value))
 	)
-		where offsets = create_offsets(node_count)
+		where offsets = dump(create_offsets(node_count))
 		where wt = def(decimal offset) generate_wobble(offset, 1)
 		where wb = def(decimal offset) generate_wobble((1.0 - offset) + 3.14 * 1.0, -1)",
 	
 
 		node_count: "int :: 10",
-		generate_wobble: "def(decimal offset, int polarity) -> [decimal,decimal] [ 0 * facing, polarity * 10.0 * sin(offset * 3.14 * 125.0  + cycle*10.0) ]",
+		generate_wobble: "def(decimal offset, int polarity) -> [decimal,decimal] [
+			0 * facing,
+			(
+				polarity *
+				10.0 *				//just a coefficient to give the wobble width
+				sin(
+					offset *			// the part that tells it where we are, horizontally
+					3.14 * 125.0 +		// my dumb ass forget we're doing degrees, not radians, but basically this multiples the 'where we're at horizontally' to make it so we go most of the way through a 'wave' by the time we get through the length. 
+					cycle*10.0			// this gets 'time' involved; this is how fast the wobble propagates
+				) *
+				//sin(
+					1.0 //(offset) //* 180
+				//)
+			)
+		]",
 		
 		create_offsets: "def(int item_count) -> [decimal] map(range(item_count), (value)/decimal(item_count - 1) )",
 			
