--- a/data/objects/experimental/wobbly_thing.cfg
+++ b/data/objects/experimental/wobbly_thing.cfg
@@ -40,19 +40,19 @@ properties: {
 	)
 		where offsets = dump(create_offsets(node_count))
 		where wt = def(decimal offset) generate_wobble(offset, 1, true)
-		where wb = def(decimal offset) generate_wobble((1.0 - offset) + 3.14 * 1.0, -1, false)",
+		where wb = def(decimal offset) generate_wobble(offset, -1, false)",
 	
 
 		node_count: "int :: 10",
 		generate_wobble: "def(decimal offset, int polarity, bool is_top) -> [decimal,decimal] [
 			0 * facing,
 			(
-				polarity *
+				1 *
 				10.0 *				//just a coefficient to give the wobble width
 				sin(
-					offset *			// the part that tells it where we are, horizontally
-					392.5 +				// this multiples the 'where we're at horizontally' to make it so we go most of the way through a 'wave' by the time we get through the length. 
-					cycle*10.0			// this gets 'time' involved; this is how fast the wobble propagates
+					if(is_top, offset, (1.0 - offset)) *			// the part that tells it where we are, horizontally
+					360 +											// this multiples the 'where we're at horizontally' to make it so we go most of the way through a 'wave' by the time we get through the length. 
+					cycle*10.0										// this gets 'time' involved; this is how fast the wobble propagates
 				) *
 				//sin(
 					1.0 //(offset) //* 180
