Worked out lengthwise attenuation.

--- a/data/objects/experimental/wobbly_thing.cfg
+++ b/data/objects/experimental/wobbly_thing.cfg
@@ -50,15 +50,15 @@ properties: {
 				1 *
 				10.0 *				//just a coefficient to give the wobble width
 				sin(
-					if(is_top, offset, (1.0 - offset)) *			// the part that tells it where we are, horizontally
+					inner_offset *			// the part that tells it where we are, horizontally
 					360 +											// this multiples the 'where we're at horizontally' to make it so we go most of the way through a 'wave' by the time we get through the length. 
 					cycle*10.0										// this gets 'time' involved; this is how fast the wobble propagates
 				) *
 				//sin(
-					1.0 //(offset) //* 180
-				//)
-			)
-		]",
+					(inner_offset)*3 //* 180
+				//) 
+			) 
+		] where inner_offset = if(is_top, offset, (1.0 - offset))",
 		
 		create_offsets: "def(int item_count) -> [decimal] map(range(item_count), (value)/decimal(item_count - 1) )",
 			
