Set up the lengthwise attenuation to be based on a sin function, instead of linear.  Backported all the improvements into the tongue.

--- a/data/object_prototypes/general/wobbly_rope.cfg
+++ b/data/object_prototypes/general/wobbly_rope.cfg
@@ -47,21 +47,35 @@
 		converted_custom_draw_params: "[decimal|[decimal,decimal]] ::
 							recombine_serially( sort_back_to_serial_order( convert_back_to_serial_coords( flip_if_facing_left_or_upside_down( convert_to_unit_square_coords( recombine_pairwise( custom_draw_params))))))",
 
-		custom_draw_params: "[decimal|[decimal,decimal]] :: (
-			offsets +
-			map(offsets, value + 2.0) +
-			map(offsets, wt(value)) +
-			map(offsets, wb(value))
-		)
-			where offsets = create_offsets(node_count)
-			where wt = def(decimal offset) generate_wobble(offset, 1)
-			where wb = def(decimal offset) generate_wobble((1.0 - offset) + 3.14 * 1.0, -1)",
+	custom_draw_params: "[decimal|[decimal,decimal]] :: (
+		offsets +
+		map(offsets, value + 2.0) +
+		map(offsets, wt(value)) +
+		map(offsets, wb(value))
+	)
+		where offsets = (create_offsets(node_count))
+		where wt = def(decimal offset) generate_wobble(offset, 1, true)
+		where wb = def(decimal offset) generate_wobble(offset, -1, false)",
 	
 
-			node_count: "int :: 10",
-			generate_wobble: "def(decimal offset, int polarity) -> [decimal,decimal] dump([ 0 * facing, polarity * 10.0 * sin(offset * 3.14 * 125.0  + level.cycle*10.0) ])",
-		
-			create_offsets: "def(int item_count) -> [decimal] map(range(item_count), (value)/decimal(item_count - 1) )",
+		node_count: "int :: 10",
+		generate_wobble: "def(decimal offset, int polarity, bool is_top) -> [decimal,decimal] [
+			0 * facing,
+			(
+				1 *
+				10.0 *				//just a coefficient to give the wobble width
+				sin(
+					inner_offset *			// the part that tells it where we are, horizontally
+					360 +											// this multiples the 'where we're at horizontally' to make it so we go most of the way through a 'wave' by the time we get through the length. 
+					cycle*10.0										// this gets 'time' involved; this is how fast the wobble propagates
+				) *
+				sin(	//This is attenuation code that basically pins the start and end, so the wobble is only in the middle.  180 would pin both ends; 200 gives no wobble at the start, and a little bit at the end.
+					(inner_offset) * 200
+				) 
+			) 
+		] where inner_offset = if(is_top, offset, (1.0 - offset))",
+				
+		create_offsets: "def(int item_count) -> [decimal] map(range(item_count), (value)/decimal(item_count - 1) )",
 
 
 	},
