--- a/data/objects/experimental/wobbly_thing.cfg
+++ b/data/objects/experimental/wobbly_thing.cfg
@@ -38,7 +38,7 @@ properties: {
 		map(offsets, wt(value)) +
 		map(offsets, wb(value))
 	)
-		where offsets = dump(create_offsets(node_count))
+		where offsets = (create_offsets(node_count))
 		where wt = def(decimal offset) generate_wobble(offset, 1, true)
 		where wb = def(decimal offset) generate_wobble(offset, -1, false)",
 	
@@ -54,9 +54,9 @@ properties: {
 					360 +											// this multiples the 'where we're at horizontally' to make it so we go most of the way through a 'wave' by the time we get through the length. 
 					cycle*10.0										// this gets 'time' involved; this is how fast the wobble propagates
 				) *
-				//sin(
-					(inner_offset)*3 //* 180
-				//) 
+				sin(	//This is attenuation code that basically pins the start and end, so the wobble is only in the middle.  180 would pin both ends; 200 gives no wobble at the start, and a little bit at the end.
+					(inner_offset) * 200
+				) 
 			) 
 		] where inner_offset = if(is_top, offset, (1.0 - offset))",
 		
