Cleaned up a bunch of the code for the tongue head.  Flipped it back from on_process to on_draw, making this a good tag if we want to merge in the changes.

--- a/data/object_prototypes/general/wobbly_rope.cfg
+++ b/data/object_prototypes/general/wobbly_rope.cfg
@@ -8,21 +8,10 @@
 			type: "{x: decimal, x2: decimal, y: decimal, y2: decimal}",
 			init: "{x: mid_x, x2: mid_x+1, y: mid_y, y2: mid_y+1}"
 		},
-		_x_1: { type: "decimal", init: "mid_x" },
-		_x_2: { type: "decimal", init: "mid_x+1" },
-		_y_1: { type: "decimal", init: "mid_y" },
-		_y_2: { type: "decimal", init: "mid_y+1" },
+
 
 		length: "decimal :: lib.math.length(bounds.x, bounds.y, bounds.x2, bounds.y2)",
-		set_ends: "def(decimal new_x1, decimal new_y1, decimal new_x2, decimal new_y2) -> commands [
-			set(bounds, {
-				x: new_x1,
-				y: new_y1,
-				x2: new_x2,
-				y2: new_y2
-			}),
-			fire_event(me,'create'),
-		]",
+
 
 #-------------------------- distortion --------------------------#
 		recombine_pairwise: "def([decimal|[decimal,decimal]] list) -> [[decimal, [decimal,decimal]]]
@@ -67,7 +56,7 @@
 				sin(
 					inner_offset *			// the part that tells it where we are, horizontally
 					360 +											// this multiples the 'where we're at horizontally' to make it so we go most of the way through a 'wave' by the time we get through the length. 
-					cycle*10.0										// this gets 'time' involved; this is how fast the wobble propagates
+					level.cycle*10.0										// this gets 'time' involved; this is how fast the wobble propagates
 				) *
 				sin(	//This is attenuation code that basically pins the start and end, so the wobble is only in the middle.  180 would pin both ends; 200 gives no wobble at the start, and a little bit at the end.
 					(inner_offset) * 200
