--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3194,16 +3194,36 @@ object_type: [
 			min_swallow_size: "10",
 
 			length_per_time: "def(int time) -> int _frog.tongue_length*(tongue_duration/2 - abs(tongue_duration/2 - time))",
+
 			set_shaft: "def(int time, decimal angle) -> commands [
-				_shaft.set_ends(	_froghead.mid_x + x_offset,
-				_froghead.mid_y + ybase_offset,
-				_froghead.mid_x + (length_per_time(time)*cos(angle)) * facing + x_offset,
-				_froghead.mid_y + ybase_offset + (length_per_time(time)*sin(angle))  )
+				set(_shaft.bounds,
+					{
+						x: _froghead.mid_x + x_offset,
+						y: _froghead.mid_y + ybase_offset,
+						x2: _froghead.mid_x + (length_per_time(time)*cos(angle)) * facing + x_offset,
+						y2: _froghead.mid_y + ybase_offset + (length_per_time(time)*sin(angle))
+					}
+				),
 			]",
-			adjust_position: "def(int time, decimal angle) -> commands	[set(midpoint_x, int(_froghead.midpoint_x + (length_per_time(time)*cos(angle)) * facing  + x_offset + if(facing = 1, 2,0))), 
-												set(midpoint_y, int(_froghead.midpoint_y + ybase_offset + (length_per_time(time)*sin(angle)) + if(facing = -1 and angle = 0, -1, 0) )),
-												set(rotate, angle * facing)]",
-			process_tongue: "def() -> commands [set_shaft(_timer, _tongue_angle),adjust_position(_timer,_tongue_angle),if(_timer >= tongue_duration,die()),fire_event('drag_victim'),if(_timer = tongue_duration/2, animation('flash')),add(_timer,1)]",
+
+			adjust_position: "def(int time, decimal angle) -> commands	[
+				set(midpoint_x,
+					int(_froghead.midpoint_x + (length_per_time(time)*cos(angle)) * facing  + x_offset + if(facing = 1, 2,0))
+				), 
+				set(midpoint_y,
+					int(_froghead.midpoint_y + ybase_offset + (length_per_time(time)*sin(angle)) + if(facing = -1 and angle = 0, -1, 0) )
+				),
+				set(rotate, angle * facing)
+			]",
+			
+			process_tongue: "def() -> commands [
+				set_shaft(_timer, _tongue_angle),
+				adjust_position(_timer,_tongue_angle),
+				if(_timer >= tongue_duration,die()),
+				fire_event('drag_victim'),
+				if(_timer = tongue_duration/2, animation('flash')),
+				add(_timer,1)
+			]",
 			
 			#-------------------------- vars --------------------------#
 			_timer: {type: "int", default: 1},
@@ -3220,19 +3240,21 @@ object_type: [
 		
 		
 		on_spawned: "set(parent, arg.spawner)",
-		on_create:  "[	set(_froghead.facing, facing),
-						add_object(_froghead),
-						add_object(_shaft),
-						set(_froghead._tongue_angle,_tongue_angle),
-						set(_froghead.parent,parent),
-						fire_event(_froghead, 'create'),
-						set(_froghead.relative_x,0),
-						set(_froghead.relative_y,-12),
-						animation('initial')] asserting parent is obj frogatto_playable",
+		on_create:  "[
+			set(_froghead.facing, facing),
+			add_object(_froghead),
+			add_object(_shaft),
+			set(_froghead._tongue_angle,_tongue_angle),
+			set(_froghead.parent,parent),
+			fire_event(_froghead, 'create'),
+			set(_froghead.relative_x,0),
+			set(_froghead.relative_y,-12),
+			animation('initial')
+		] asserting parent is obj frogatto_playable",
 		
 		
 		
-		on_process: "process_tongue()",
+		on_draw: "process_tongue()",
 		
 		on_die: "[
 			if(_swallowed and _swallowed.physical_size > 8, [
