Adjusted some code so the tongue shaft is at the correct position on the first frame of its existence.

--- a/data/object_prototypes/general/wobbly_rope.cfg
+++ b/data/object_prototypes/general/wobbly_rope.cfg
@@ -43,12 +43,12 @@
 		map(offsets, wb(value))
 	)
 		where offsets = (create_offsets(node_count))
-		where wt = def(decimal offset) generate_wobble(offset, 1, true)
-		where wb = def(decimal offset) generate_wobble(offset, -1, false)",
+		where wt = def(decimal offset) generate_wobble(offset, true)
+		where wb = def(decimal offset) generate_wobble(offset, false)",
 	
 
 		node_count: "int :: 10",
-		generate_wobble: "def(decimal offset, int polarity, bool is_top) -> [decimal,decimal] [
+		generate_wobble: "def(decimal offset, bool is_top) -> [decimal,decimal] [
 			0 * facing,
 			(
 				1 *
@@ -66,17 +66,16 @@
 				
 		create_offsets: "def(int item_count) -> [decimal] map(range(item_count), (value)/decimal(item_count - 1) )",
 
+		process_wobble: "[
+			set(mid_y, int( (bounds.y2 + bounds.y) / 2) ),
+			set(x, int((bounds.x2 + bounds.x) / 2 - (length/2))),
+			set(draw_area, [0, 0, length/2, img_h/2]),
+			set(rotate, ( angle(bounds.x, bounds.y, bounds.x2, bounds.y2) ) ),
 
+			set(custom_draw, converted_custom_draw_params),
+		]",
 	},
 	
-	on_process: "[
-		set(mid_y, int( (bounds.y2 + bounds.y) / 2) ),
-		set(x, int((bounds.x2 + bounds.x) / 2 - (length/2))),
-		set(draw_area, [0, 0, length/2, img_h/2]),
-		set(rotate, ( angle(bounds.x, bounds.y, bounds.x2, bounds.y2) ) ),
-
-		set(custom_draw, converted_custom_draw_params),
-	]",
 
 		
 	animation: {
