--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3197,21 +3197,21 @@ object_type: [
 
 			set_shaft: "def(int time, decimal angle) -> commands [
 				set(_shaft.bounds,
-					{
-						x: _froghead.mid_x + x_offset,
-						y: _froghead.mid_y + ybase_offset,
-						x2: _froghead.mid_x + (length_per_time(time)*cos(angle)) * facing + x_offset,
-						y2: _froghead.mid_y + ybase_offset + (length_per_time(time)*sin(angle))
-					}
+					dump({
+						x: anchor_pos.x + x_offset,
+						y: anchor_pos.y + ybase_offset,
+						x2: anchor_pos.x + (length_per_time(time)*cos(angle)) * facing + x_offset,
+						y2: anchor_pos.y + ybase_offset + (length_per_time(time)*sin(angle))
+					})
 				),
 			]",
 
 			adjust_position: "def(int time, decimal angle) -> commands	[
 				set(midpoint_x,
-					int(_froghead.midpoint_x + (length_per_time(time)*cos(angle)) * facing  + x_offset + if(facing = 1, 2,0))
+					int(anchor_pos.x + (length_per_time(time)*cos(angle)) * facing  + x_offset + if(facing = 1, 2,0))
 				), 
 				set(midpoint_y,
-					int(_froghead.midpoint_y + ybase_offset + (length_per_time(time)*sin(angle)) + if(facing = -1 and angle = 0, -1, 0) )
+					int(anchor_pos.y + ybase_offset + (length_per_time(time)*sin(angle)) + if(facing = -1 and angle = 0, -1, 0) )
 				),
 				set(rotate, angle * facing)
 			]",
@@ -3223,7 +3223,11 @@ object_type: [
 				fire_event('drag_victim'),
 				if(_timer = tongue_duration/2, animation('flash')),
 				add(_timer,1)
+				;
+				_shaft.process_wobble
 			]",
+			
+			anchor_pos: "{x: level.player.mid_x, y: level.player.mid_y - 12}",
 			
 			#-------------------------- vars --------------------------#
 			_timer: {type: "int", default: 1},
@@ -3249,12 +3253,14 @@ object_type: [
 			fire_event(_froghead, 'create'),
 			set(_froghead.relative_x,0),
 			set(_froghead.relative_y,-12),
-			animation('initial')
+			animation('initial'),
+			;
+			process_tongue()
 		] asserting parent is obj frogatto_playable",
 		
 		
 		
-		on_draw: "process_tongue()",
+		on_process: "if( cycle > 1, process_tongue())",
 		
 		on_die: "[
 			if(_swallowed and _swallowed.physical_size > 8, [
