Changed the initialization parameters so the tongue tip is in the correct position on the first frame.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -633,7 +633,7 @@ properties: {
 	spawn_tongue: "def(decimal angle) -> commands
 			[if(animation in ['stand', 'leave_crouch', 'walk', 'run', 'enter_lookup', 'lookup','skid', 'land'], animation('attack')),
 			if(animation in ['jump', 'fall', 'start_jump'], animation('jump_attack')),
-			spawn('${self.type}.tongue_tip', if(facing > 0, x + 30, x), y + 46, {facing: facing, _tongue_angle:angle, _frog: me}, [set(_tongue_tip, child)])]",
+			spawn('frogatto_playable.tongue_tip', mid_x, mid_y -12, {facing: facing, _tongue_angle:angle, _frog: me}, [set(_tongue_tip, child)])]",
 	
 	extend_tongue: "commands ::
 			if(ctrl_tongue_counter > 1 or (_tongue_tip != null), null,
@@ -3197,29 +3197,27 @@ object_type: [
 
 			set_shaft: "def(int time, decimal angle) -> commands [
 				set(_shaft.bounds,
-					dump({
+					{
 						x: anchor_pos.x + x_offset,
 						y: anchor_pos.y + ybase_offset,
 						x2: anchor_pos.x + (length_per_time(time)*cos(angle)) * facing + x_offset,
 						y2: anchor_pos.y + ybase_offset + (length_per_time(time)*sin(angle))
-					})
+					}
 				),
 			]",
 
 			adjust_position: "def(int time, decimal angle) -> commands	[
-				set(midpoint_x,
-					int(anchor_pos.x + (length_per_time(time)*cos(angle)) * facing  + x_offset + if(facing = 1, 2,0))
-				), 
-				set(midpoint_y,
+				set(midpoint_xy, [
+					int(anchor_pos.x + (length_per_time(time)*cos(angle)) * facing  + x_offset + if(facing = 1, 2,0)),
 					int(anchor_pos.y + ybase_offset + (length_per_time(time)*sin(angle)) + if(facing = -1 and angle = 0, -1, 0) )
-				),
+				]),
 				set(rotate, angle * facing)
 			]",
 			
-			process_tongue: "def() -> commands [
+			process_tongue: "commands :: [
 				set_shaft(_timer, _tongue_angle),
 				adjust_position(_timer,_tongue_angle),
-				if(_timer >= tongue_duration,die()),
+				if(_timer >= tongue_duration, die()),
 				fire_event('drag_victim'),
 				if(_timer = tongue_duration/2, animation('flash')),
 				add(_timer,1)
@@ -3231,7 +3229,7 @@ object_type: [
 			
 			#-------------------------- vars --------------------------#
 			_timer: {type: "int", default: 1},
-			_tongue_angle: {type: "int", default: 0},
+			_tongue_angle: {type: "decimal", default: 0},
 			_last_x: {type: "int", default: 0},
 			_last_y: {type: "int", default: 0},
 			_swallowed: {type: "obj throwable|null", default: null},
@@ -3248,19 +3246,19 @@ object_type: [
 			set(_froghead.facing, facing),
 			add_object(_froghead),
 			add_object(_shaft),
-			set(_froghead._tongue_angle,_tongue_angle),
+			set(_froghead._tongue_angle, int(_tongue_angle)),
 			set(_froghead.parent,parent),
 			fire_event(_froghead, 'create'),
 			set(_froghead.relative_x,0),
 			set(_froghead.relative_y,-12),
 			animation('initial'),
 			;
-			process_tongue()
+			process_tongue
 		] asserting parent is obj frogatto_playable",
 		
 		
 		
-		on_process: "if( cycle > 1, process_tongue())",
+		on_process: "process_tongue",
 		
 		on_die: "[
 			if(_swallowed and _swallowed.physical_size > 8, [
