Added some really complicated math to make the tongue go mostly straight at the apex of the sling-out.

--- a/data/object_prototypes/general/wobbly_rope.cfg
+++ b/data/object_prototypes/general/wobbly_rope.cfg
@@ -11,7 +11,8 @@
 
 
 		length: "decimal :: lib.math.length(bounds.x, bounds.y, bounds.x2, bounds.y2)",
-
+		
+		progression_fraction: {type: "decimal", default: 0},
 
 #-------------------------- distortion --------------------------#
 		recombine_pairwise: "def([decimal|[decimal,decimal]] list) -> [[decimal, [decimal,decimal]]]
@@ -52,7 +53,7 @@
 			0 * facing,
 			(
 				1 *
-				10.0 *				//just a coefficient to give the wobble width
+				20.0 *				//just a coefficient to give the wobble width
 				sin(
 					inner_offset *			// the part that tells it where we are, horizontally
 					360 +											// this multiples the 'where we're at horizontally' to make it so we go most of the way through a 'wave' by the time we get through the length. 
@@ -60,7 +61,9 @@
 				) *
 				sin(	//This is attenuation code that basically pins the start and end, so the wobble is only in the middle.  180 would pin both ends; 200 gives no wobble at the start, and a little bit at the end.
 					(inner_offset) * 200
-				) 
+				)
+				*
+				lib.math.ease_out_sine( 1.0 - progression_fraction )
 			) 
 		] where inner_offset = if(is_top, offset, (1.0 - offset))",
 				
