--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3195,7 +3195,7 @@ object_type: [
 
 			length_per_time: "def(int time) -> int _frog.tongue_length*(tongue_duration/2 - abs(tongue_duration/2 - time))",
 
-			set_shaft: "def(int time, decimal angle) -> commands [
+			set_shaft: "def(int time, decimal angle, decimal duration) -> commands [
 				set(_shaft.bounds,
 					{
 						x: anchor_pos.x + x_offset,
@@ -3204,7 +3204,54 @@ object_type: [
 						y2: anchor_pos.y + ybase_offset + (length_per_time(time)*sin(angle))
 					}
 				),
+				set(_shaft.progression_fraction, convert_duration_to_depth(decimal(time),duration) ),
+				//debug( calculate_pingpong_time_val(time,duration) ),
+				//set(_shaft.progression_fraction, convert_duration_to_depth(time,duration)),
 			]",
+			
+			convert_duration_to_depth: "def(decimal current_time, decimal full_duration) -> decimal
+				/*
+					This is intended to make a progression of 0.0 -> 1.0 at the midpoint -> 0.0 again.   So if the duration was 20 units long, it'd be at 100% halfways in, and at 0% at the ends.
+				*/
+				(calculate_pingpong_time_val(current_time,full_duration) / full_duration)
+				
+				where half_duration = full_duration/2.0
+			",
+			 
+			calculate_pingpong_time_val: "def(decimal absolute_time, decimal full_duration) -> decimal
+				/*
+					This is borrowed from some animation frame calculation code.
+			
+					We want input values like:
+					0	1	2	3	4	5	6	7	8	9	10
+					to become
+					0	1	2	3	4	5	4	3	2	1	0
+
+					The first thing we do is remainder our current values into a number from 0 -> 10.
+					This is done in `rem_current_frame`.	
+				
+
+
+					The next thing we do is a funky bit of math that successfully turns:
+					0	1	2	3	4	5	6	7	8	9	10
+					into
+					0	1	2	3	4	0	4	3	2	1	0
+				*/
+	
+				lib.math.decimal_mod(full_duration - abs(full_duration-rem_current_frame), full_duration)
+				+
+				/*
+					which is great, except we want a 6 in the middle, which is where the following awkward chunk of math comes in:
+				*/
+				if(
+					lib.math.decimal_mod(rem_current_frame, full_duration) = 0,
+						full_duration * lib.math.decimal_mod(rem_current_frame/full_duration, 2),
+						0
+				)
+				where rem_current_frame = lib.math.decimal_mod(absolute_time, (full_duration * 2))
+			",
+
+
 
 			adjust_position: "def(int time, decimal angle) -> commands	[
 				set(midpoint_xy, [
@@ -3215,7 +3262,7 @@ object_type: [
 			]",
 			
 			process_tongue: "commands :: [
-				set_shaft(_timer, _tongue_angle),
+				set_shaft(_timer, _tongue_angle, tongue_duration/2),
 				adjust_position(_timer,_tongue_angle),
 				if(_timer >= tongue_duration, die()),
 				fire_event('drag_victim'),
@@ -3228,6 +3275,7 @@ object_type: [
 			anchor_pos: "{x: level.player.mid_x, y: level.player.mid_y - 12}",
 			
 			#-------------------------- vars --------------------------#
+			_progression: {type: "decimal", default: 0},
 			_timer: {type: "int", default: 1},
 			_tongue_angle: {type: "decimal", default: 0},
 			_last_x: {type: "int", default: 0},
