Tweaked the tongue wobble timing to have the sine wave progress faster, and adding an easing function to the amplitude straightening.

--- a/data/object_prototypes/general/wobbly_rope.cfg
+++ b/data/object_prototypes/general/wobbly_rope.cfg
@@ -52,17 +52,17 @@
 		generate_wobble: "def(decimal offset, bool is_top) -> [decimal,decimal] [
 			0 * facing,
 			(
-				1 *
 				20.0 *				//just a coefficient to give the wobble width
 				sin(
-					inner_offset *			// the part that tells it where we are, horizontally
-					360 +											// this multiples the 'where we're at horizontally' to make it so we go most of the way through a 'wave' by the time we get through the length. 
-					level.cycle*10.0										// this gets 'time' involved; this is how fast the wobble propagates
+					inner_offset *				// the part that tells it where we are, horizontally
+					360 +						// this multiples the 'where we're at horizontally' to make it so we go most of the way through a 'wave' by the time we get through the length. 
+					level.cycle*25.0			// this gets 'time' involved; this is how fast the wobble propagates
 				) *
 				sin(	//This is attenuation code that basically pins the start and end, so the wobble is only in the middle.  180 would pin both ends; 200 gives no wobble at the start, and a little bit at the end.
 					(inner_offset) * 200
 				)
 				*
+				// This takes a normalized value indicating how far the tongue is extended, and makes it a straight line at the 100% extension mark.
 				lib.math.ease_out_sine( 1.0 - progression_fraction )
 			) 
 		] where inner_offset = if(is_top, offset, (1.0 - offset))",
