--- a/data/level/Forest/tempo-village-house-store.cfg
+++ b/data/level/Forest/tempo-village-house-store.cfg
@@ -527,6 +527,23 @@
 			"x": 998,
 			"y": 205
 		},
+		{
+			"_uuid": "438d123f394b411793bf0703ec731046",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "show_coin_hud",
+			"on_start_level": "[frogatto.gui_gold_display.set_perma_show(true)] where frogatto = (obj frogatto_playable <- level.player)",
+			"property_data": {
+				"_x2_bound": -918,
+				"_x_bound": -1168,
+				"_y2_bound": 298,
+				"_y_bound": 48
+			},
+			"type": "level_controller",
+			"x": -1068,
+			"y": 148
+		}
 	],
 	"dimensions": [-640,-448,1663,599],
 	"id": "tempo-village-house-store.cfg",
