Fixed the 'permanently show coin counter in shops' code, which apparently lost an on_create call.  I reworked it to use a list of approved levels rather than level controller objects.

--- a/data/objects/gui-components/hud-components/hud_gold_display.cfg
+++ b/data/objects/gui-components/hud-components/hud_gold_display.cfg
@@ -4,26 +4,28 @@
 	hidden_in_game: true,
 
 	properties: {
-		perma_show: {type: "bool", default: false},
 		set_text: "def(string text) -> commands [set(txt, text), fire_event(me, 'create')]",
 		txt: {type: "string", default: "+"},
 		size: "2",
 		font: "string :: 'numbers_gold_enormous'",
 		align: "'right'",
 		
-		set_perma_show: "def(bool show) -> commands [
-			set(perma_show, show),
-			if(show,
-				set(mid_y, native_position.y + vertical_full_offset),
-			)	
-		]",		
-	
+
+		mandatory_visibility: "bool :: level.id in levels_on_which_visibility_is_mandatory",
+
+		levels_on_which_visibility_is_mandatory: "[string] :: [
+			'chopple-shop-interior.cfg',
+			'tempo-village-house-store.cfg',
+			'prosperas-workshop.cfg'
+		]",
+
+
 		comparison_point_for_coins: { type: "int", default: 0 },
 		last_changed_coins: { type: "int", default: -500 },
 		display_timeout: "decimal :: 100",
 		
 		vertical_full_offset: "decimal :: 90",
-		vertical_offset: "vertical_full_offset * lib.math.ease_in_out_elastic(ratio)
+		vertical_offset: "vertical_full_offset * if(mandatory_visibility, 1.0, lib.math.ease_in_out_elastic(ratio))
 		
 			where ratio = (1.0 - min(1.0, decimal(me.cycle -  (last_changed_coins + delay) )/display_timeout ))
 			where delay = 200",
@@ -43,6 +45,8 @@
 		coin_icon: { type: "obj hud_gold_display.coin_icon", init: "object('hud_gold_display.coin_icon', x, y, {parent: me})", },
 	},
 
+	on_create: "[text(txt, font, size, align), add_object(coin_icon), set(coin_icon.relative_x, 60), set(coin_icon.relative_y, 8)]",
+
 	on_window_resize: "set(xy, [new_pos.x, new_pos.y])
 		where new_pos = {x:screen_w - 66*2,y:50}
 		where screen_w = level.camera_position[2]",
@@ -54,12 +58,8 @@
 			me.set_text( str(level.player.coins) + '×')
 			;
 			set(text_alpha, alpha_proxy),
-			if(not perma_show,
-				[
-					poll_for_coin_changes,
-					set_vertical_pos,
-				]
-			)
+			poll_for_coin_changes,
+			set_vertical_pos,
 		])
 	]",
 	
