Added a guard to keep the gate sound from playing too close to the start of the level.

--- a/data/objects/props-interactive/obstacles/gate.cfg
+++ b/data/objects/props-interactive/obstacles/gate.cfg
@@ -164,11 +164,22 @@ object_type: [
 
 			is_locked: { type: "bool", default: false },
 			immediately_set_pos: "if(is_locked, set_at_closed_pos(),set_at_open_pos())",
+			
+			sound_guarded: "def(string filename, int time_offset) -> commands
+				/*
+					Since it's too hard to rebuild the lock/unlock code in an immediate and non-animated way (critically; a second code path is a bit problematic), we're plugging the only real drawback of 'going through the animation every time, including at level load', by adding a small guard statement to not do the sound if we're just starting the level.
+				*/
+				if(level.cycle > 20,
+					bind_command(
+						def() schedule(time_offset, play_sound__falloff(filename))
+					)
+				)
+			",
 		},
 		
 		on_lock: "[
 			set(me.is_locked,true),
-			schedule(10, play_sound__falloff('gate-close.ogg')),
+			sound_guarded('gate-close.ogg', 10),
 			animate(me,
 				{
 					y: origin_y
@@ -182,7 +193,7 @@ object_type: [
 		]",
 		on_unlock: "[
 			set(me.is_locked,false),
-			play_sound__falloff('gate-open.ogg'),
+			sound_guarded('gate-open.ogg', 0),
 			animate(me,
 				{
 					y: origin_y - 120
