Added existing explosion sounds for missiles shot by cannons.

--- a/data/objects/enemies/milgram-hazards/cannon.cfg
+++ b/data/objects/enemies/milgram-hazards/cannon.cfg
@@ -49,7 +49,7 @@ object_type: [
 	on_collide_feet: "animation('explode')",
 	on_hit_player: "animation('explode')",
 	on_end_normal_anim: "animation('normal')",
-	on_bang: "spawn('explosion_spark_bright',midpoint_x,midpoint_y,facing)",
+	on_bang: "spawn('explosion_spark_bright',midpoint_x,midpoint_y,facing),sound('BombExplode.wav')",
 	on_end_explode_anim: "die()",
 	animation: [
 	
