--- a/data/objects/enemies/milgram-hazards/cannon.cfg
+++ b/data/objects/enemies/milgram-hazards/cannon.cfg
@@ -43,97 +43,11 @@ animation: [
 ],
 object_type: [
 	{
-	id: "missile_diag",
-	on_collide_side: "animation('explode')",
-	on_collide_head: "animation('explode')",
-	on_collide_feet: "animation('explode')",
-	on_hit_player: "animation('explode')",
-	on_end_normal_anim: "animation('normal')",
-	on_bang: "[spawn('explosion_spark_bright',midpoint_x,midpoint_y,facing),sound_falloff('BombExplode.wav')]",
-	on_end_explode_anim: "die()",
-	animation: [
-	
-		#	solid_area=3,6,14,13
-		{
-			id: "normal",
-			image: "enemies/cannon.png",
-			rotate: -45,
-			x: 3,
-			y: 159,
-			w: 19,
-			h: 19,
-			frames: 2,
-			pad: 3,
-			duration: 1,
-			scale: 2,
-			velocity_x: 500,
-			velocity_y: -500,
-			palettes: "@include data/palettes.cfg:dungeon_palettes",
-		},
-		{
-			id: "explode",
-			image: "enemies/cannon.png",
-			x: 47,
-			y: 162,
-			w: 13,
-			h: 13,
-			frames: 1,
-			duration: 10,
-			velocity_x: 1,
-			velocity_y: 1,
-			events: "2:bang",
-			palettes: "@include data/palettes.cfg:dungeon_palettes",
-		},
-	],
-	},
-	{
-		id: "missile_vert",
-		on_collide_side: "animation('explode')",
-		on_collide_head: "animation('explode')",
-		on_collide_feet: "animation('explode')",
-		on_hit_player: "animation('explode')",
-		on_end_normal_anim: "animation('normal')",
-		on_bang: "spawn('explosion_spark_bright',midpoint_x,midpoint_y,facing)",
-		on_end_explode_anim: "die()",
-		animation: [
-		
-			#	solid_area=3,6,14,13
-			{
-				id: "normal",
-				image: "enemies/cannon.png",
-				rotate: -90,
-				x: 3,
-				y: 159,
-				w: 19,
-				h: 19,
-				frames: 2,
-				pad: 3,
-				duration: 1,
-				velocity_y: -800,
-				palettes: "@include data/palettes.cfg:dungeon_palettes",
-			},
-			{
-				id: "explode",
-				image: "enemies/cannon.png",
-				x: 47,
-				y: 162,
-				w: 13,
-				h: 13,
-				frames: 1,
-				duration: 10,
-				velocity_x: 1,
-				velocity_y: 1,
-				events: "2:bang",
-				palettes: "@include data/palettes.cfg:dungeon_palettes",
-			},
-		],
-	},
-	{
 		id: "missile",
 		always_active: true,
 		object_level_collisions: true,
 		prototype: ["shot"],
-		on_die: "spawn('explosion', midpoint_x, midpoint_y, facing)",
+		on_die: "[spawn('explosion', midpoint_x, midpoint_y, facing),sound_falloff('BombExplode.wav')]",
 		animation: {
 			id: "normal",
 			image: "enemies/cannon.png",
