Changed spikebug commit to sound_falloff.

--- a/data/objects/enemies/bugs/red_spikebug.cfg
+++ b/data/objects/enemies/bugs/red_spikebug.cfg
@@ -32,7 +32,7 @@ properties: {
 			(level.player.midpoint_y > midpoint_y - distance) and
 			(level.player.midpoint_y < midpoint_y + distance)",
 	
-	walk_or_run: "if(player_within(200),[animation('run'),sound('spikebug-lunge.wav'],animation('walk'))",
+	walk_or_run: "if(player_within(200),[animation('run'),sound_falloff('spikebug-lunge.wav')],animation('walk'))",
 	
 },
 on_end_stand_anim: "walk_or_run",
