Possible fix for an issue where, if they fall fast enough (by falling far enough), the milgram-blocks -fail- to do fall damage.  This is showing up on the final milgram boss fight.  The fix we're doing is to make them passthrough to the player, and have a platform area on top.  They're solid to everything else, though.

--- a/data/objects/enemies/milgramen/milgram_block.cfg
+++ b/data/objects/enemies/milgramen/milgram_block.cfg
@@ -2,6 +2,8 @@
 id: "milgram_block",
 prototype: ["ant"],
 solid_area: [2,9,22,25],
+platform_area: [2,9,22,10],
+solid_dimensions: ["enemy"],
 properties: {
 	attack_damage: "if(animation in ['fall','spring'] and level.player.difficulty >= difficulties.challenging, 3, 1)",
 	turns_at_cliffs: "false",
@@ -46,7 +48,7 @@ animation: [
 		body_area: "all",
 		id: "fall",
 		rect: [176,1,200,28],
-		attack_area: [2,15,23,27],
+		attack_area: [2,15,23,35],
 	},
 
 	#Ants and beetles all share the same frame layout and timings:
