Added a guard statement to make the loud 'switch' sound that pullables trigger not fire on level start.

--- a/data/object_prototypes/general/switches_and_triggers/pullable_coordinator.cfg
+++ b/data/object_prototypes/general/switches_and_triggers/pullable_coordinator.cfg
@@ -17,9 +17,8 @@ properties: {
 	/*
 		In these visual bits here, we're omitting the `animation` calls to pushed, because this is generally an invisible coordinator object.
 	*/
-	visually_turn_on: "commands :: [sound('switch.wav')]",
-	visually_turn_off: "commands :: [sound('switch.wav')]", 
-
+	visually_turn_on: "commands :: [play_switch_sound_guarded]",
+	visually_turn_off: "commands :: [play_switch_sound_guarded]", 
 
 	should_this_be_active: "bool :: if((event_is_irreversible and (_event != default_event_state)),
 										bool(_event),
