--- a/data/object_prototypes/general/switches_and_triggers/pullable_untracked.cfg
+++ b/data/object_prototypes/general/switches_and_triggers/pullable_untracked.cfg
@@ -153,6 +153,17 @@ properties: {
 
 
 
+#-------------------------- cosmetic effects --------------------------#
+	play_switch_sound_guarded: "commands ::
+		/*
+			Since it's too hard to rebuild the lock/unlock code in an immediate and non-animated way (critically; a second code path is a bit problematic), we're plugging the only real drawback of 'going through the animation every time, including at level load', by adding a small guard statement to not do the sound if we're just starting the level.
+		*/
+		if(level.cycle > 20,
+			sound('switch.wav')
+		)
+	",
+
+
 },
 
 
