--- a/data/objects/props-interactive/locks/match_lock_coordinator.cfg
+++ b/data/objects/props-interactive/locks/match_lock_coordinator.cfg
@@ -63,8 +63,8 @@ properties: {
 
 	default_event_state: { type: "int", dynamic_initialization: true },
 
-	visually_turn_on: "commands :: [sound('switch.wav')]",
-	visually_turn_off: "commands :: [sound('switch.wav')]", 
+	visually_turn_on: "commands :: [play_switch_sound_guarded]",
+	visually_turn_off: "commands :: [play_switch_sound_guarded]", 
 	
 	event_is_irreversible: "bool :: true",
 },
