--- a/data/objects/props-interactive/npcs/milgram_npc.cfg
+++ b/data/objects/props-interactive/npcs/milgram_npc.cfg
@@ -23,6 +23,7 @@ on_end_beaten_up_idle_anim: "animation('beaten_up_idle')",
 on_end_beaten_up_talk_anim: "if(_mutter_counter > 0, [add(_mutter_counter,-1),animation('beaten_up_talk')] ,animation('beaten_up_idle'))",
 on_get_up: "[animation('get_up'),set(time_in_animation,121)]",
 on_end_get_up_anim: "animation('stand')",
+on_footfall: "sound_falloff('footstep-heavy'+1d6+'.wav')",
 
 
 animation: [
