Fixed a problematic case where multiple, overlapping objects (an npc, and a fireplace) were preventing the npc from talking.  Mostly a dirty fix on this one, rather than a good fix.

--- a/data/level/Dungeon/kitty-dormitory.cfg
+++ b/data/level/Dungeon/kitty-dormitory.cfg
@@ -558,7 +558,8 @@
 			},
 			"type": "fireplace_milgram",
 			"x": -3050,
-			"y": -1538
+			"y": -1538,
+			"on_create": "schedule(1, set(animation, 'noninteractive'))",
 		},
 		{
 			"_uuid": "17d159f5f19042bc9470038733446a73",
