--- a/data/objects/props/furniture-dungeon/fireplace_milgram.cfg
+++ b/data/objects/props/furniture-dungeon/fireplace_milgram.cfg
@@ -112,11 +112,20 @@ properties: {
 },
 
 
-
+on_end_noninteractive_anim: "animation('noninteractive')",
 on_end_normal_anim: "animation('normal')",
 on_end_burn_anim: "[animation('burn'), set(time_in_animation,1d10)]",
 
 animation: [
+	{
+		image: "props/furniture-castle.png",
+		pad: 0,
+		id: "noninteractive",
+		rect: [176,0,255,63],
+		frames: 1,
+		duration: 100,
+		palettes: "@include data/palettes.cfg:dungeon_palettes",
+	},
 	{
 		image: "props/furniture-castle.png",
 		pad: 0,
